--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,6 +12,25 @@
   align-items: center;
 }
 
+.vertical {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.button {
+  background-color: #4caf50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  cursor: pointer;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
 .footer {
   display: flex;
   flex: 1;
@@ -43,6 +62,7 @@
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
+  margin-bottom: 2rem;
 }
 
 .title,
@@ -66,6 +86,7 @@
 }
 
 .grid {
+  margin-top: 15rem;
   display: flex;
   align-items: center;
   justify-content: center;
